# prices-rs

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
src/: log.rs  main.rs  prisma.rs
src/rest/: server.rs
src/sources/: coinmarketcap.rs
src/websockets/: session.rs
