[package]
name = "prices"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.16.1"
lapin = { version = "2.3.1", features = ["rustls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
log = "0.4"
simple_logger = "1.15.0"
serde = "1.0.197"
serde_json = "1.0"
env_logger = "0.9"
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json", "native-tls-vendored"] }
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.11" }

[workspace]
members = [
    "prisma-cli",
]
